--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -264,6 +264,13 @@ jobs:
     runs-on: ubuntu-latest
     needs: [prepare, docker-merge]
     steps:
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Test Docker image
         run: |
           VERSION=${{ needs.prepare.outputs.version }}
